--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,23 @@
     font-family:Verdana;
   }
 }
+@media screen and (max-width: 800px) {
+  header,header:after {
+    padding: 20px 10px !important;
+  }
+  .nav-bar {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .nav-bar{
+    float: none;
+  }
+}
 
+body {
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
 .page{
   margin-left:100px;
   margin-right:100px;
@@ -22,7 +38,6 @@ section{
   
 }
 
-
 h1{
   color:#c49b1e;
   font-family:  Helvetica,Verdana;
@@ -30,24 +45,25 @@ h1{
 }
 
 .title{
+  float: left;
   position: absolute; 
   top: 0; 
   left: 0; 
   display: flex;
   align-items: center;
-  gap: 5px;
   padding:5px;
 }
 
 header {
-  max-width: 1600px;
+  width: 100%;
   height: 75px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  position: sticky;
+  position: fixed;
   top: 0;
   background: #0a0a23;
+  overflow: hidden;
+  z-index: 99;
 }
 header:after {
   content: '';
@@ -61,8 +77,9 @@ header:after {
   border-top-right-radius: 50% 20%; 
   user-select: none;
 }
-.key{
-  
+
+.nav-bar{
+  flex:1 0 auto;
   height: 90px;
   max-width: 100%;
 }
@@ -71,7 +88,7 @@ nav > ul {
   display: flex;
   justify-content: space-evenly; 
   flex-direction: row-reverse
-  gap: 5px; 
+  gap: 15px; 
   padding: 5px;
   padding-inline-start: 450px; 
   margin-block: 450px; 
@@ -81,13 +98,14 @@ nav > ul {
 nav > ul > li {
   font-family: Helvetica, Verdana;
   color: #c49b1e;
-  padding: 0.9rem;
+  padding: 2rem;
   display: block;
   flex: 1;
 }
 
 nav > ul > li:hover {
   cursor: pointer;
+  color:white;
 }
 
 li > a {
