--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,3 @@
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    scroll-behavior: smooth;
-    font-family:Verdana;
-  }
-}
-@media screen and (max-width: 800px) {
-  header,header:after {
-    padding: 20px 10px !important;
-  }
-  .nav-bar {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .nav-bar{
-    float: none;
-  }
-}
-
 body {
   overflow-x: hidden; /* Hide horizontal scrollbar */
 }
@@ -30,40 +10,21 @@ section{
   margin-bottom:50px;
 }
 
-#logo {
-  width: max(100px, 18vw);
-  background-color: #0a0a23;
-  aspect-ratio: 35 / 4;
-  padding: 0.4rem;
-  
-}
-
 h1{
   color:#c49b1e;
   font-family:  Helvetica,Verdana;
   font-size:20px;
 }
 
-.title{
-  float: left;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  display: flex;
-  align-items: center;
-  padding:5px;
-}
-
 header {
   width: 100%;
-  height: 75px;
-  display: flex;
-  align-items: center;
+  max-height:100px;
+  padding-bottom: 30px;
   position: fixed;
   top: 0;
+  transition: 0.4s;
   background: #0a0a23;
   overflow: hidden;
-  z-index: 99;
 }
 header:after {
   content: '';
@@ -77,30 +38,22 @@ header:after {
   border-top-right-radius: 50% 20%; 
   user-select: none;
 }
-
-.nav-bar{
-  flex:1 0 auto;
-  height: 90px;
-  max-width: 100%;
+.title{
+  display:flex;
+  align-items: center;
+  gap:5px;
 }
 
 nav > ul {
   display: flex;
-  justify-content: space-evenly; 
-  flex-direction: row-reverse
-  gap: 15px; 
-  padding: 5px;
-  padding-inline-start: 450px; 
-  margin-block: 450px; 
-  height: 100%;
+  /*float: left;*/
 }
 
 nav > ul > li {
   font-family: Helvetica, Verdana;
   color: #c49b1e;
-  padding: 2rem;
+  margin: 2rem;
   display: block;
-  flex: 1;
 }
 
 nav > ul > li:hover {
@@ -108,7 +61,7 @@ nav > ul > li:hover {
   color:white;
 }
 
-li > a {
+li a {
   color: inherit;
   text-decoration: none;
 }
@@ -166,6 +119,8 @@ h2{
 iframe{
   margin-left:30%;
   margin-right:30%;
+  width:500px;
+  height:300px;
 }
 
 ptc{
@@ -178,7 +133,7 @@ ptc{
 ptc:hover {
   cursor: pointer;
 }
-ptc > a {
+ptc a {
   color: inherit;
   text-decoration: none;
 }
@@ -206,6 +161,7 @@ h5{
   height:30px;
   font-size:21px;
   text-align:center;
+  text-justify: auto;
 }
 .pricebox >p{
   text-align:center;
@@ -217,4 +173,36 @@ h4{
   text-align:center;
   padding-top:0;
   padding-bottom: 0;
+}
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+    font-family:Verdana;
+  }
+}
+@media screen and (max-width: 860px) {
+  nav >ul{
+    padding: 3px 35% 30px !important;
+  }
+  nav > ul >li{
+    display: none;
+    
+  }
+  .page{
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+  iframe{
+    margin-left:25%;
+    margin-right:25%;
+    width:250px;
+    height:150px;
+  }
+  .priceboxes{
+    align-items: center;
+    margin-left: 1px;
+  }
+  .pricebox{
+    height:300px;
+  }
 }
